[gd_scene load_steps=36 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Demon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Collectable.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/bg_backdrop_long.png" type="Texture" id=5]
[ext_resource path="res://clouds.gd" type="Script" id=6]
[ext_resource path="res://assets/bg_clouds.png" type="Texture" id=7]
[ext_resource path="res://assets/bg_foreground.png" type="Texture" id=8]
[ext_resource path="res://Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://HUD.gd" type="Script" id=10]
[ext_resource path="res://assets/m5x7.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://sounds/select.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/_ghost_-_Reverie_(small_theme).wav" type="AudioStream" id=13]
[ext_resource path="res://assets/white.png" type="Texture" id=14]
[ext_resource path="res://sounds/static.wav" type="AudioStream" id=15]
[ext_resource path="res://sounds/gurdonark_-_Autumn_s_Dream_Lullaby_1.wav" type="AudioStream" id=16]
[ext_resource path="res://sounds/applause.wav" type="AudioStream" id=17]
[ext_resource path="res://sounds/music-box.wav" type="AudioStream" id=18]
[ext_resource path="res://sounds/beep1.wav" type="AudioStream" id=19]
[ext_resource path="res://sounds/beep2.wav" type="AudioStream" id=20]
[ext_resource path="res://sounds/beep3.wav" type="AudioStream" id=21]

[sub_resource type="DynamicFont" id=14]
size = 32
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_color = Color( 0.141176, 0.145098, 0.196078, 1 )
font_data = ExtResource( 11 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.0037037, 0.966667 )
colors = PoolColorArray( 0.972549, 0.772549, 0.235294, 1, 0.74292, 0.465962, 0.465962, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
max_value = 10.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.865243, 0.19325 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 5, 20, 1 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
angular_velocity = 350.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 25.0
angle = 45.0
scale = 10.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 32
outline_color = Color( 0.141176, 0.145098, 0.196078, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=10]
size = 32
outline_color = Color( 0.141176, 0.145098, 0.196078, 1 )
font_data = ExtResource( 11 )

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;
render_mode unshaded;
 
void fragment()
{
	float brightness = 0.4;
	vec4 screen = texture(SCREEN_TEXTURE, SCREEN_UV);
	COLOR.rgb = vec3(dot(screen.rgb, vec3(brightness, brightness, brightness)));
}"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )

[sub_resource type="DynamicFont" id=13]
size = 64
font_data = ExtResource( 11 )

[node name="Main" type="Node2D"]
position = Vector2( 411.859, 278.186 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
Ground = ExtResource( 2 )
Demon = ExtResource( 3 )
Collectable = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true

[node name="background" type="ParallaxLayer" parent="ParallaxBackground"]
editor/display_folded = true
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 1024, 0 )

[node name="background" type="TextureRect" parent="ParallaxBackground/background"]
margin_left = 1.78491
margin_right = 1025.78
margin_bottom = 600.0
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_group_": true
}

[node name="clouds" type="ParallaxLayer" parent="ParallaxBackground"]
editor/display_folded = true
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 1024, 0 )
script = ExtResource( 6 )

[node name="clouds" type="TextureRect" parent="ParallaxBackground/clouds"]
margin_left = -0.46582
margin_right = 1023.53
margin_bottom = 600.0
texture = ExtResource( 7 )
stretch_mode = 2
__meta__ = {
"_edit_group_": true
}

[node name="foreground" type="ParallaxLayer" parent="ParallaxBackground"]
editor/display_folded = true
position = Vector2( 1.78491, 0.892456 )
motion_mirroring = Vector2( 1024, 0 )

[node name="foreground" type="TextureRect" parent="ParallaxBackground/foreground"]
margin_top = -0.892456
margin_right = 1024.0
margin_bottom = 599.108
texture = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_group_": true
}

[node name="Player" parent="." instance=ExtResource( 9 )]

[node name="DemonTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="CollectableTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="WinTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 10 )

[node name="Leaderboard" type="Control" parent="HUD"]
margin_left = 357.0
margin_top = 163.233
margin_right = 415.606
margin_bottom = 203.233

[node name="PlaceLabel1" type="Label" parent="HUD/Leaderboard"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color_shadow = Color( 0.317647, 0.25098, 0.25098, 1 )
text = "1)
"

[node name="PlaceLabel2" type="Label" parent="HUD/Leaderboard"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 5.0
margin_right = 20.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color_shadow = Color( 0.317647, 0.25098, 0.25098, 1 )
text = "2)
"

[node name="PlaceLabel3" type="Label" parent="HUD/Leaderboard"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 30.0
margin_right = 20.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color_shadow = Color( 0.317647, 0.25098, 0.25098, 1 )
text = "3)
"

[node name="PlaceLabel4" type="Label" parent="HUD/Leaderboard"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 55.0
margin_right = 20.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color_shadow = Color( 0.317647, 0.25098, 0.25098, 1 )
text = "4)
"

[node name="PlaceLabel5" type="Label" parent="HUD/Leaderboard"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 80.0
margin_right = 20.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color_shadow = Color( 0.317647, 0.25098, 0.25098, 1 )
text = "5)
"

[node name="TimerLabel" type="Label" parent="HUD"]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.317647, 0.25098, 0.25098, 1 )

[node name="ScoreLabel" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -280.0
margin_right = 12.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.317647, 0.25098, 0.25098, 1 )
text = "0
"
align = 1

[node name="TitleLabel" type="Label" parent="HUD"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -145.0
margin_right = 92.0
margin_bottom = -34.9333
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.317647, 0.25098, 0.25098, 1 )
text = "gloaw"
align = 1

[node name="Fire" type="Particles2D" parent="HUD/TitleLabel"]
position = Vector2( 80.439, 33.6952 )
rotation = -1.5708
scale = Vector2( 0.2, 0.2 )
amount = 100
lifetime = 2.0
process_material = SubResource( 8 )

[node name="InstructionsLabel" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -336.0
margin_top = -70.0
margin_right = 336.0
margin_bottom = 39.5
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_shadow = Color( 0.317647, 0.25098, 0.25098, 1 )
text = "collect fifty lights after you catch your demons
<arrow keys> or <WASD> to move, <space> to accelerate"
align = 1

[node name="InstructionsTimer" type="Timer" parent="HUD"]

[node name="StartButton" type="Button" parent="HUD"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -61.0
margin_top = -301.0
margin_right = 59.0
margin_bottom = -258.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_hover = Color( 0.639216, 0.0627451, 0.0627451, 1 )
custom_colors/font_color_pressed = Color( 0.639216, 0.0627451, 0.0627451, 1 )
text = "start"
flat = true
clip_text = true

[node name="StartSound" type="AudioStreamPlayer2D" parent="HUD/StartButton"]
stream = ExtResource( 12 )

[node name="StartMusic" type="AudioStreamPlayer2D" parent="HUD/StartButton"]
position = Vector2( -39.2459, -83.996 )
stream = ExtResource( 13 )
autoplay = true

[node name="LeaderboardButton" type="Button" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -71.0
margin_top = -264.0
margin_right = 70.0
margin_bottom = -226.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_hover = Color( 0.639216, 0.0627451, 0.0627451, 1 )
custom_colors/font_color_pressed = Color( 0.639216, 0.0627451, 0.0627451, 1 )
text = "leaderboard"
flat = true
clip_text = true

[node name="GreyscaleShader" type="TextureRect" parent="HUD"]
editor/display_folded = true
material = SubResource( 12 )
margin_top = 1.0
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 14 )
expand = true

[node name="Static" type="AudioStreamPlayer2D" parent="HUD/GreyscaleShader"]
position = Vector2( 351, 238 )
stream = ExtResource( 15 )
volume_db = -15.146

[node name="RestartButton" type="Button" parent="HUD"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -68.2493
margin_top = -297.514
margin_right = 76.7507
margin_bottom = -260.514
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.639216, 0.0627451, 0.0627451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "restart"
flat = true
clip_text = true

[node name="RestartSound" type="AudioStreamPlayer2D" parent="HUD/RestartButton"]
stream = ExtResource( 12 )

[node name="HomeButton" type="Button" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -69.7499
margin_top = -260.485
margin_right = 75.2501
margin_bottom = -228.485
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.639216, 0.0627451, 0.0627451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "home"
flat = true
clip_text = true

[node name="BackButton" type="Button" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -69.7499
margin_top = -260.485
margin_right = 75.2501
margin_bottom = -228.485
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.639216, 0.0627451, 0.0627451, 1 )
custom_colors/font_color_pressed = Color( 0.639216, 0.0627451, 0.0627451, 1 )
text = "back"
flat = true
clip_text = true

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="HUD"]
stream = ExtResource( 16 )

[node name="Applause" type="AudioStreamPlayer2D" parent="HUD"]
position = Vector2( 411.859, 278.186 )
stream = ExtResource( 17 )

[node name="MusicBox" type="AudioStreamPlayer2D" parent="HUD"]
position = Vector2( 411.859, 278.186 )
stream = ExtResource( 18 )

[node name="WinningScoreLabel" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -140.0
margin_right = 56.0
margin_bottom = 25.5
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_shadow = Color( 0.317647, 0.25098, 0.25098, 1 )
text = "0
"
align = 1

[node name="Node" type="Node" parent="HUD"]

[node name="Beep1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )
volume_db = -10.602

[node name="Beep2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )
volume_db = -10.097

[node name="DemonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )
volume_db = -15.65
[connection signal="timeout" from="DemonTimer" to="." method="_on_DemonTimer_timeout"]
[connection signal="timeout" from="CollectableTimer" to="." method="_on_CollectableTimer_timeout"]
[connection signal="timeout" from="WinTimer" to="." method="_on_WinTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="pressed" from="HUD/StartButton" to="HUD" method="_on_StartButton_pressed"]
[connection signal="pressed" from="HUD/LeaderboardButton" to="HUD" method="_on_LeaderboardButton_pressed"]
[connection signal="pressed" from="HUD/RestartButton" to="HUD" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="HUD/HomeButton" to="HUD" method="_on_HomeButton_pressed"]
[connection signal="pressed" from="HUD/BackButton" to="HUD" method="_on_BackButton_pressed"]
